EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==09/18/2009==
KLS: Fixed an error with Perl::Group::GetMember(index) added Perl::Raid::GetMember(index).
KLS: Added new npc types field: 'unique_spawn_by_name'.  NPC will only attempt to spawn if there isn't already a npc with it's exact name in the zone already.
Rogean: Added World IP Logging @ Login.

<Required SQL> 980_account_ip.sql

==09/16/2009==
KLS: Added support for raid all loot (type 4), raids will default to this loot type now(may have some appearance issues).
KLS: Added command #raidloot to change raid loot manually, this is needed for titanium if they want to switch from 4 to another and back to 4 since the client does not support type 4 natively.
KLS: Added private_corpse to npctypes to dictate whether a corpse will unlock to outside people or not, by default(0) it will unlock.

==09/08/2009==
Trevius: SoF - Corrected disciplines for SoF clients so they can load up to 100 instead of being cut-off at 50 max.

==08/28/2009==
KLS: Fix for bug with AI_Start not clearing feign death.
KLS: Worked out basics for /claim, not yet implemented but worked out all the packets needed for sof/titanium.
KLS: Finished with /claim implementation.

==08/26/2009==
KLS: Significantly lowered karma required to talk globally if using the system.
KLS: Fixed some small potential exploits.
KLS: Extended anti-spam to /tell, will extend fully to universal chat server soon.
KLS: Started work on /report but did not finish implementation yet.
KLS: Added hotzone support.
KLS: Finished /report implementation.

==08/23/2009==
WildcardX: *BOTS* Fixed a bug that made bots ghost when moving.
KLS: More tweaks to anti-hack systems, should trigger MQWarp less often.
KLS: Instituted a cooldown on looting items from corpses, 200ms per item looted.

==08/17/2009==
KLS: Fix for zonesummon variables influencing next zone attempt if you inner-zone first.

==08/13/2009==